adding another cors thing

--- a/frontend/bagel_app/src/Pages/Home/Home.module.css
+++ b/frontend/bagel_app/src/Pages/Home/Home.module.css
@@ -72,7 +72,7 @@ secttion.three {
 
     grid-area: content;
     display: flex;
-    align-items: flex-start;
+    align-items: left;
     justify-content: center;
     flex-direction: column;
 }
