--- a/frontend/bagel_app/src/Pages/Disclaimer/Disclaimer.css
+++ b/frontend/bagel_app/src/Pages/Disclaimer/Disclaimer.css
@@ -6,7 +6,7 @@
 }
 
 h2 {
-    text-align: center;
+    
     margin-top: 5%;
     padding-bottom:2%
 }
@@ -31,17 +31,32 @@ h2 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.buttonDivStyle {
+.backButtonDivStyle {
     display: flex;
     justify-content: center;
-    margin: 5%;
+    margin: 2%;
+    padding-bottom: 2%;
 }
 
-.buttonStyle {
+/* .buttonStyle {
     font-size: 15px;
     font-weight: bold;
     margin-top: 2%;
+} */
+
+.orderButtonStyle{
+    display: flex;
+    justify-content: center;
+    margin: 2%;
 }
+/* 
+.button-container{
+    display:flex;
+    justify-content: center;
+    flex-direction:column;
+    gap:20px;
+    margin:5%
+} */
 
 
 
@@ -69,7 +84,13 @@ h2 {
     padding-top:5%;
     font-size: medium;
 }
-
+.orderButtonStyle {
+    display: flex;
+    justify-content: center;
+    margin: 2%;
+    padding-top:2%;
+    padding-bottom: 5%;
+}
 
 
 }
