--- a/frontend/bagel_app/src/Pages/ConfirmOrder/ConfirmOrder.module.css
+++ b/frontend/bagel_app/src/Pages/ConfirmOrder/ConfirmOrder.module.css
@@ -40,7 +40,9 @@ table{
 
 .title{
     text-align:center;
-    padding-top:5%
+    padding-top:5%;
+    font-weight: 500;
+    font-size:50px;
 }
 
 
@@ -58,6 +60,10 @@ table{
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
             margin: 80px auto;
             border-radius: 10px;
+        }
+        .title{
+            font-weight:450;
+            font-size:40px
         }
     
 
