--- a/frontend/bagel_app/src/Pages/Disclaimer/Disclaimer.css
+++ b/frontend/bagel_app/src/Pages/Disclaimer/Disclaimer.css
@@ -5,10 +5,11 @@
     margin-top: 2%;
 }
 
-h2 {
+.h2Style {
     
     margin-top: 5%;
-    padding-bottom:2%
+    padding-bottom:2%;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .innerDivStyle{
@@ -25,7 +26,11 @@ h2 {
 }
 
 .bigDivStyle {
+    display:flex;
+    justify-content:center;
+    flex-direction:column;
     background-color: whitesmoke;
+    /* background-color: #ececec; */
     width: 80%;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -49,14 +54,14 @@ h2 {
     justify-content: center;
     margin: 2%;
 }
-/* 
+
 .button-container{
     display:flex;
     justify-content: center;
-    flex-direction:column;
+    flex-direction:row;
     gap:20px;
     margin:5%
-} */
+}
 
 
 
