--- a/frontend/bagel_app/src/Pages/Home/Home.module.css
+++ b/frontend/bagel_app/src/Pages/Home/Home.module.css
@@ -15,7 +15,8 @@ body {
     /* background: #ffc0cb; maybe dark salmon */
     /* background-color:rgb(47, 143, 175); */
     /* background-color: skyblue; */
-    background-color: lightblue;
+    background-color: #90ccf4;
+    /* background-color: skyblue; */
     position: relative;
     height: 100%;
     /* overflow: hidden; */
