--- a/frontend/bagel_app/src/Pages/Order/Form.module.css
+++ b/frontend/bagel_app/src/Pages/Order/Form.module.css
@@ -15,6 +15,7 @@
     /* background-color:#C38d9E; */
     /* background-color: #e98074; */
     background-color:whitesmoke;
+    /* background-color: #ececec;     */
     width: 30%;
     font-style:bold;
     
@@ -33,6 +34,8 @@
 .buttonContainer{
     display: flex;
     justify-content: center;
+    padding-top:2%;
+    padding-bottom:2%;
 }
 
 .bagelList{
@@ -51,7 +54,7 @@ li{
     height: 40px;
     border-radius: 4px;
     border: whitesmoke;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
 
 input[type="number"]{
@@ -59,7 +62,7 @@ input[type="number"]{
     height: 27px;
     border: whitesmoke;
     border-radius: 4px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
     margin-left: 1%;
     font-size:14px;
         font-family: "Haas Grot Text R Web",
