--- a/frontend/bagel_app/src/Pages/Payment/Payment.css
+++ b/frontend/bagel_app/src/Pages/Payment/Payment.css
@@ -32,10 +32,14 @@
 }
 
 #button{
-        display: flex;
-            justify-content: center;
+    display: flex;
+    justify-content: center;
 }
-
+.title{
+    margin-top: 60px;
+    text-align: center;
+    font-weight:400
+}
 
 @media (max-width: 800px){
     .payDiv {
@@ -58,4 +62,10 @@
             margin-bottom: 5%;
 
         }
+                .title {
+                    margin-top: 60px;
+                    text-align: center;
+                    font-weight: 500;
+                    font-size:40px
+                }
 }
