--- a/frontend/bagel_app/src/Pages/Home/Timer.module.css
+++ b/frontend/bagel_app/src/Pages/Home/Timer.module.css
@@ -24,18 +24,18 @@
     padding-right: 52px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     #timelabel {
         font-size: 500%;
         text-align:left;
-        padding-top:7%;
-        padding-left:0%;
-        margin: 0%;/* Add this line to center the element horizontally */
+        padding-bottom:7%;
+        padding-left:2%;
+
     }
 
     .timersection {
         display:flex;
-                justify-content: center;
+        justify-content: center;
         font-size: xx-small;
         
         
@@ -46,7 +46,8 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        gap: 0px;
+        padding-top:15%;
+        gap: 10px;
         margin-top:-30px;
         font-size: xx-small;
         
@@ -59,9 +60,12 @@
   .dayDiv,
   .minDiv,
   .hourDiv {
-      /* display: flex;
-      flex-direction: row; */
+      display: flex;
+      flex-direction: row;
     margin-top: -10px;
+    text-align:left;
+    padding-left:10%;
+
     /* margin-bottom: -10px; */
   }
 
