added cream cheese bagels and made some edits to home page

--- a/frontend/bagel_app/src/Pages/Order/Form.module.css
+++ b/frontend/bagel_app/src/Pages/Order/Form.module.css
@@ -133,6 +133,10 @@ button {
 
 @media (max-width: 800px) {
 
+    .actualForm{
+        margin:5%;
+    }
+
     .disclaimer {
         text-align: center;
         margin-top: -5%;
